[project]
name = "mas-mnd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alpha-vantage>=3.0.0",
    "apache-airflow>=3.0.2",
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "kaleido>=1.0.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
]
